clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr71700.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr71700.c" (c, x86_64-unknown-linux-gnu)
global c : rec_S[2] = ConstArray { ty: Array { element_type: Named("rec_S"), size: 2 }, elts: Array([ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("u32i"), value: "65535" }]) }, ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("u32i"), value: "65535" }]) }]), trailing_zeros_num: 0 } [internal, default, align 4, dso_local]
global d : rec_S = Zero { ty: Named("rec_S") } [external, default, align 4, dso_local]
global b : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_S, "e", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0 : s64i
        %4 = get_global @c : rec_S[2]*
        get_element
        copy
        %6 = get_global @d : rec_S*
        copy
        scope {
                %9 = get_global @d : rec_S*
                get_member
                get_bitfield
                %12 = cast(integral) %11 : s32i
                %13 = const 0 : s32i
                cmp
                if %14 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
