clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr77766.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr77766.c" (c, x86_64-unknown-linux-gnu)
global d : s16i = CirInt { ty: Named("s16i"), value: "5" } [external, default, align 2, dso_local]
global f : s32i = CirInt { ty: Named("s32i"), value: "4" } [external, default, align 4, dso_local]
global g : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global b : s16i = CirInt { ty: Named("s16i"), value: "0" } [external, default, align 2, dso_local]
global c : s8i[1] = Zero { ty: Array { element_type: Named("s8i"), size: 1 } } [external, default, align 1, dso_local]
global j : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global a : s8i = CirInt { ty: Named("s8i"), value: "0" } [external, default, align 1, dso_local]
global e : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global h : s16i = CirInt { ty: Named("s16i"), value: "0" } [external, default, align 2, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "i", align 4
        %2 = const 0 : s32i
        store %2, %0
        scope {
                for cond {
                        %52 = get_global @f : s32i*
                        %53 = load %52 : s32i, align 4
                        %54 = cast(int_to_bool) %53 : bool
                        condition %54
                } step {
                        %18 = get_global @a : s8i*
                        %19 = load %18 : s8i, align 1
                        %20 = cast(integral) %19 : s32i
                        %21 = get_global @f : s32i*
                        store %20, %21, align 4
                        yield
                } body {
                        scope {
                                %22 = const 0 : s32i
                                %23 = get_global @g : s32i*
                                store %22, %23, align 4
                                scope {
                                        for cond {
                                                %48 = get_global @g : s32i*
                                                %49 = load %48 : s32i, align 4
                                                %50 = const 32 : s32i
                                                cmp
                                                condition %51
                                        } step {
                                                %24 = get_global @g : s32i*
                                                %25 = load %24 : s32i, align 4
                                                inc
                                                store %26, %24, align 4
                                                yield
                                        } body {
                                                scope {
                                                        %27 = const 0 : s32i
                                                        store %27, %1, align 4
                                                        scope {
                                                                for cond {
                                                                        %45 = load %1 : s32i, align 4
                                                                        %46 = const 3 : s32i
                                                                        cmp
                                                                        condition %47
                                                                } step {
                                                                        %31 = load %1 : s32i, align 4
                                                                        inc
                                                                        store %32, %1, align 4
                                                                        yield
                                                                } body {
                                                                        scope {
                                                                                while {
                                                                                        %40 = const 1 : s32i
                                                                                        %41 = get_global @d : s16i*
                                                                                        %42 = load %41 : s16i, align 2
                                                                                        %43 = cast(integral) %42 : s32i
                                                                                        cmp
                                                                                        condition %44
                                                                                } do {
                                                                                        scope {
                                                                                                %33 = get_global @b : s16i*
                                                                                                %34 = load %33 : s16i, align 2
                                                                                                %35 = cast(integral) %34 : s64i
                                                                                                %36 = get_global @c : s8i[1]*
                                                                                                get_element
                                                                                                %38 = load %37 : s8i, align 1
                                                                                                %39 = cast(int_to_bool) %38 : bool
                                                                                                if %39 {
                                                                                                        break
                                                                                                }
                                                                                                yield
                                                                                        }
                                                                                        yield
                                                                                }
                                                                                yield
                                                                        }
                                                                        yield
                                                                }
                                                                yield
                                                        }
                                                        br ^bb1
                                                    ^bb1:
                                                        label L:
                                                        scope {
                                                                %28 = get_global @j : s32i*
                                                                %29 = load %28 : s32i, align 4
                                                                %30 = cast(int_to_bool) %29 : bool
                                                                if %30 {
                                                                        break
                                                                }
                                                                yield
                                                        }
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %3 = const 0 : s32i
        %4 = get_global @e : s32i*
        store %3, %4, align 4
        scope {
                for cond {
                        %15 = get_global @e : s32i*
                        %16 = load %15 : s32i, align 4
                        %17 = cast(int_to_bool) %16 : bool
                        condition %17
                } step {
                        %7 = const 0 : s32i
                        %8 = get_global @e : s32i*
                        store %7, %8, align 4
                        yield
                } body {
                        scope {
                                %9 = get_global @d : s16i*
                                %10 = load %9 : s16i, align 2
                                inc
                                store %11, %9, align 2
                                scope {
                                        for cond {
                                                %12 = get_global @h : s16i*
                                                %13 = load %12 : s16i, align 2
                                                %14 = cast(int_to_bool) %13 : bool
                                                condition %14
                                        } step {
                                                yield
                                        } body {
                                                goto L
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %5 = const 0 : s32i
        store %5, %0
        %6 = load %0 : s32i
        return %6
}
