clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr77767.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr77767.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i*, %arg2: s32i, %arg3: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i*, %arg2: s32i, %arg3: s32i*):
        %9 = alloca s32i, "a", align 4
        %10 = alloca s32i*, "b", align 8
        %11 = alloca s32i, "c", align 4
        %12 = alloca s32i*, "d", align 8
        store %arg0, %9
        store %arg1, %10
        store %arg2, %11
        store %arg3, %12
        %13 = load %9 : s32i, align 4
        inc
        store %14, %9, align 4
        %15 = load %11 : s32i, align 4
        inc
        store %16, %11, align 4
        scope {
                %17 = load %9 : s32i, align 4
                %18 = const 2 : s32i
                cmp
                %20 = ternary %19 ? { : bool
                        %24 = const true : bool
                        yield %24
                } : {
                        %21 = load %11 : s32i, align 4
                        %22 = const 2 : s32i
                        cmp
                        yield %23
                }
                if %20 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[10], "e", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        %4 = cast(array_to_ptrdecay) %1 : s32i*
        %5 = const 1 : s32i
        %6 = cast(array_to_ptrdecay) %1 : s32i*
        call @foo(%3, %4, %5, %6) [all]
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
