clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr78170.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr78170.c" (c, x86_64-unknown-linux-gnu)
global __const.fn1.e : rec_S0 = ConstRecord { ty: Named("rec_S0"), members: Array([CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("s32i"), value: "0" }, CirInt { ty: Named("u64i"), value: "17179901952" }]) } [cir_private, default, dso_local, constant]
global b : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global d : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global c : rec_S0 = Zero { ty: Named("rec_S0") } [external, default, align 4, dso_local]
global a : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn fn1() -> void [external, c, no_inline, dso_local, nothrow] {
        %10 = const 1 : s32i
        %11 = get_global @b : s32i*
        store %10, %11, align 4
        %12 = get_global @d : s32i*
        store %10, %12, align 4
        scope {
                for cond {
                        %23 = get_global @b : s32i*
                        %24 = load %23 : s32i, align 4
                        %25 = cast(int_to_bool) %24 : bool
                        condition %25
                } step {
                        %13 = get_global @a : s32i*
                        %14 = load %13 : s32i, align 4
                        %15 = get_global @b : s32i*
                        store %14, %15, align 4
                        yield
                } body {
                        scope {
                                %16 = alloca rec_S0, "e", align 4
                                %17 = get_global @__const.fn1.e : rec_S0*
                                copy
                                %18 = get_global @c : rec_S0*
                                copy
                                %19 = const -1 : s32i
                                %20 = get_global @c : rec_S0*
                                get_member
                                set_bitfield
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @fn1 : () -> void*
        call @fn1() [all]
        scope {
                %5 = get_global @c : rec_S0*
                get_member
                get_bitfield
                %8 = const 0 : s32i
                cmp
                if %9 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %3 = const 0 : s32i
        store %3, %0
        %4 = load %0 : s32i
        return %4
}
