clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr78378.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr78378.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %10 = alloca u64i, "x", align 8
        %11 = alloca u64i, "__retval", align 8
        store %arg0, %10
        %12 = const 41 : s32i
        %13 = load %10 : u64i, align 8
        shift
        store %14, %10, align 8
        %15 = const 232 : u64i
        %16 = load %10 : u64i, align 8
        div
        store %17, %10, align 8
        %18 = const 1 : s32i
        %19 = load %10 : u64i, align 8
        %20 = cast(integral) %19 : u16i
        %21 = cast(integral) %20 : s32i
        %22 = add %18, %21 : s32i [nsw]
        %23 = cast(integral) %22 : u64i
        store %23, %11
        %24 = load %11 : u64i
        return %24
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca u64i, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : u64i
        %4 = call @foo(%3) : u64i [all]
        store %4, %1, align 8
        scope {
                %7 = load %1 : u64i, align 8
                %8 = const 11300 : u64i
                cmp
                if %9 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %5 = const 0 : s32i
        store %5, %0
        %6 = load %0 : s32i
        return %6
}
