clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr78436.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr78436.c" (c, x86_64-unknown-linux-gnu)
global s : rec_S = Zero { ty: Named("rec_S") } [external, default, align 8, dso_local]

fn foo() -> void [external, c, no_inline, dso_local, nothrow] {
        %11 = const 0 : s8i
        %12 = get_global @s : rec_S*
        get_member
        set_bitfield
        %15 = const -1193165 : s64i
        %16 = get_global @s : rec_S*
        get_member
        set_bitfield
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @foo : () -> void*
        call @foo() [all]
        scope {
                %5 = get_global @s : rec_S*
                get_member
                get_bitfield
                %8 = cast(integral) %7 : s32i
                %9 = const 0 : s32i
                cmp
                if %10 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %3 = const 0 : s32i
        store %3, %0
        %4 = load %0 : s32i
        return %4
}
